; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_TestMemoryLeaks.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_TestMemoryLeaks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TotalMemory = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [22 x i8] c"Ok, but %s are left!\0A\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"Ok.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @TestMemoryLeaks(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* @TotalMemory, align 8
  %4 = icmp sgt i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i64, i64* @TotalMemory, align 8
  %7 = call i8* @MemStr(i64 %6)
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* %7)
  br label %15

9:                                                ; preds = %1
  %10 = load i64, i64* %2, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %9
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  br label %14

14:                                               ; preds = %12, %9
  br label %15

15:                                               ; preds = %14, %5
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i8* @MemStr(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
